[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://images/ecran1.jpg" type="Texture" id=2]
[ext_resource path="res://images/ecran2.jpg" type="Texture" id=3]
[ext_resource path="res://images/ecran3.jpg" type="Texture" id=4]
[ext_resource path="res://resources/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[node name="Tutorial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ecran1" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.533333, 0.555556 )
texture = ExtResource( 2 )
centered = false

[node name="ecran2" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.533333, 0.555556 )
texture = ExtResource( 3 )
centered = false

[node name="ecran3" type="Sprite" parent="."]
scale = Vector2( 0.53125, 0.555556 )
texture = ExtResource( 4 )
centered = false

[node name="NextButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -50.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.329412, 0.329412, 0.329412, 1 )
enabled_focus_mode = 0
text = "Suivant"
flat = true

[node name="SkipButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.0
margin_top = 550.0
margin_right = -120.0
margin_bottom = 600.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.329412, 0.329412, 0.329412, 1 )
enabled_focus_mode = 0
text = "Passer"
flat = true
[connection signal="pressed" from="NextButton" to="." method="next_screen"]
[connection signal="pressed" from="SkipButton" to="." method="play"]
